<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sai5"
    android:padding="16dp">

    <!-- Top Icon -->

    <!-- White Card Background -->

    <ImageView
        android:id="@+id/imgDoctor"
        android:layout_width="179dp"
        android:layout_height="228dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/ic_doctor_logo" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="179dp"
        android:layout_height="63dp"
        android:layout_below="@id/imgDoctor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="93dp"
        android:shadowColor="#55000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/title_popc"
        android:textColor="#1C4969"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="42dp"
        android:background="@drawable/rounded_card"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Subtitle inside card -->
        <TextView
            android:background="@color/purple_200"

            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/description_popc"
            android:textColor="#000000"
            android:textSize="20sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/login_button_desc"
            android:fontFamily="cursive"
            android:text="@string/login"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/signin_button_desc"
            android:fontFamily="cursive"
            android:text="@string/register"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>
